2013/03/14	Fix for systems without sysctl.h from vapier

2013/03/04	radvdump MTU and route fix by Jean-Jacques

2012/11/20	Replaced pekkas@netcore.fi with reubenhwk@gmail.com
		Normalized dates in CHANGES to YYYY/MM/DD
		release 1.9.2

2012/10/11	Fix in Makefile.am for parallel builds

2012/06/19	Removing AC_C_CONST from configure

2012/06/19	Fixing bashism '==' in configure
		Updating to 1.9.1 and releasing

2012/06/14	Version 1.9 release

2012/06/02	Fixing Dabian bug #634485 (GheRivero)

2012/04/10	Using libdaemon
		bumping version to 1.9

2012/02/22	include the prefix option in the RA packets even when
		AdvPreferredLifetime equals 0, and set AdvPreferredLifetime
		as user specified(zero).  Li Wei <lw@cn.fujitsu.com>

2012/02/07	NETLINK_NO_ENOBUFS set on netlink socket to prevent
		endless error loop.  Patch by Ulrich Weber

2012/01/25	PID in PID file is now correct
		1.8.5rc1

2012/01/21	1.8.4 released

2012/01/12	renaming configure.in to configure.ac
		removing CVS keywords
		1.8.4rc1

2012/01/07	Always do privsep on linux.  Validate the PID file contents.

2011/11/02	Adding --nodaemon option

2011/10/14	1.8.3 release

2011/10/08	More careful checking of iface name

2011/10/06	Updating buffer usage tracking in send_ra to track buffer usage BEFORE
		the buffer is used rather than after in order to prevent buffer overflow

2011/10/06	1.8.2 release

2011/10/04	1) A privilege escalation flaw was found in radvd, due to a buffer overflow
		in the process_ra() function.  ND_OPT_DNSSL_INFORMATION option parsing
		"label_len" was not checked for negative values, leading to a "suffix"
		buffer overflow which can lead to privilege escalation, at least if
		radvd is compiled without GCC's stack protection. If radvd is invoked
		without privilege separation (the -u option), this can lead to an
		escalation to root privileges.  Note: Red Hat Enterprise Linux starts
		radvd by default with the unprivileged user. (CVE-2011-3601)
